--- a/SWAI_UI_20200120/UI_presentation_1/Podfile
+++ b/SWAI_UI_20200120/UI_presentation_1/Podfile
@@ -4,7 +4,9 @@
 target 'UI_presentation_1' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'Firebase/Core'
+  pod 'Firebase/Firestore'
+  pod 'FirebaseFirestoreSwift'
   pod 'HGCircularSlider'
   # Pods for UI_presentation_1
-
 end
