--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/SleepWithAI.entitlements
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/SleepWithAI.entitlements
@@ -2,13 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>UI_presentation_1.xcscheme_^#shared#^_</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>24</integer>
-		</dict>
-	</dict>
+	<key>aps-environment</key>
+	<string>development</string>
 </dict>
 </plist>
