--- a/SWAI_UI_20200120/UI_presentation_1/Podfile
+++ b/SWAI_UI_20200120/UI_presentation_1/Podfile
@@ -5,6 +5,8 @@ target 'UI_presentation_1' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   pod 'HGCircularSlider'
+
   # Pods for UI_presentation_1
+  pod 'Charts'
 
 end
