Revert "Deleted Settings Tab & HGCircular Cocoapod"
This reverts commit d61af20211009bb59e3aa5fa8387ae44aa0e23cb.

--- a/SWAI_UI_20200120/UI_presentation_1/Podfile
+++ b/SWAI_UI_20200120/UI_presentation_1/Podfile
@@ -4,6 +4,7 @@
 target 'UI_presentation_1' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'HGCircularSlider'
 
   # Pods for UI_presentation_1
   pod 'Charts'
